2010-01-31  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-encodings.h (GMIME_UUENCODE_LEN): Fixed to prevent
	possible buffer overflows.

2010-01-30  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Disabled strict-aliasing to work around subtle
	bugs generated by gcc 4.4 when optimizations are enabled.

2010-01-30  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-iconv-utils.c (g_mime_iconv_strndup): Cleaned up the
	code a bit.

2010-01-17  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-filter-crlf.c (filter_filter): Fixed bug #606875 by
	not trying to skip multiple characters per pass thru the loop when
	encountering the first '.' of a possible '..' sequence.

2010-01-12  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (g_mime_utils_decode_8bit): Make sure to
	always increment inptr as we force-convert it to ascii. Thanks to
	Damian Pietras for finding this bug.

2009-12-15  Jeffrey Stedfast  <fejj@novell.com>

	* Released 2.5.0 - it's time to get this out there for people to
	play with.

2009-11-30  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Don't include EXTRA_LIBS in GMIME_LIBS, instead
	add it to GMIME_LIBS_PRIVATE so that things properly expand in the
	.pc file.

	* gmime.pc.in: Moved -lz -lnsl, etc into Libs.private. Fixes bug
	#603273.

2009-11-05  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-multipart.c (ptr_array_insert): Fixed to handle an
	index larger than the current array length as well as fixing the
	true insert case to shift items when index is les than the current
	array length (as opposed to when it is equal-to). Thanks to
	harven@gingers.rulez.pl for finding this bug.

2009-10-10  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c: Fixed the military timezone offsets.

	* gmime/gmime-encodings.c (g_mime_encoding_uudecode_step): Fixed a
	uudecoding bug when uulen % 3 is 2. Thanks to Peter Hartley. Fixes
	bug #597794.

2009-10-01  Jeffrey Stedfast  <fejj@novell.com>
